Minor fix in exception handling and documentation.